--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,13 +4,14 @@
 
   ],
   "include": [
-    "src",
+    "src", "index.d.ts",
 
   ],
   "ts-node": {
     "esm": true,
     "experimentalSpecifierResolution": "node",
     "transpileOnly": true,
+    
   },
   "compilerOptions": {
     "declaration": true,
