--- a/package.json
+++ b/package.json
@@ -7,14 +7,22 @@
   "license": "MIT",
   "type": "module",
   "types": "dist/",
+  
   "dependencies": {
-    "@truffle/compile-common": "^0.9.8",
-    "@truffle/compile-solidity": "^6.0.79",
-    "@truffle/config": "^1.3.61",
-    "testeranto": "latest",
+    "testeranto": "0.126.0",
     "tsc": "^2.0.4",
     "typescript": "^5.8.3"
   },
+
+  "devDependencies": {
+    "@openzeppelin/contracts": "^4.8.0",
+    "@ethersproject/shims": "^5.7.0",
+    "@truffle/compile-solidity": "6.0.56",
+    "ganache": "^7.9.2",
+    "web3": "^4.16.0",
+    "web3-eth-contract": "^1.8.1"
+  },
+  
   "scripts": {
     "t-build": "tsx node_modules/testeranto/dist/prebuild/build.mjs",
     "t-run": "tsx node_modules/testeranto/dist/prebuild/run.mjs",
